# Synchro-you

./: .gitignore  Dockerfile  api_test.py  inference.py  inference_backup.py  inference_backup1106.py  inference_service_1107.py  local_test.py  pyproject.toml
data/: embedding_vector_mp_full.npy
data/embedding/bbikibbiki/: embedding_vector_check.npy
data/embedding/maratanghuru/: embedding_vector_mp_full.npy
data/vector/bbikibbiki/: landmarks_3d_pos2_infer.csv
data/vector/maratanghuru/: landmarks_3d_anchor.csv  landmarks_3d_neg.csv  landmarks_3d_pos.csv
train/: train-layernorm-classification-val-earlystop-1st.ipynb
