[tool.poetry]
name = "synchro-you-aikong"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.2.0"
pandas = "^2.2.3"
pydantic = "^2.9.2"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
numpy = "<2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
